--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "randomcolor": "^0.6.2",
+    "moment": "^2.27.0",
     "socket.io": "^2.3.0",
     "uuid": "^8.3.0"
   },
